k8s/alpha.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-core-status-service
  name: fint-core-status-service
spec:
  ports:
    - name: "8080"
      port: 8080
  type: ClusterIP
  selector:
    io.kompose.service: fint-core-status-service
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-status-service
  #namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`beta.felleskomponent.no`) && PathPrefix(`/status`)
      kind: Rule
      services:
        - name: fint-core-status-service
          #namespace: default
          port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-core-status-service
  name: fint-core-status-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-core-status-service
  template:
    metadata:
      labels:
        io.kompose.service: fint-core-status-service
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        - image: fintlabsacr.azurecr.io/fint-core-status-service:dummy
          name: fint-core-status-service
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
